--- a/FE-Web/package.json
+++ b/FE-Web/package.json
@@ -27,6 +27,7 @@
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "sass": "^1.70.0",
     "scss": "^0.2.4",
     "socket.io-client": "^4.7.5",
