--- a/frontend.conf
+++ b/frontend.conf
@@ -1,20 +1,36 @@
 server {
     listen 80;
-    server_name 47.129.47.189;
-
-
+    server_name YOUR_EC2_PUBLIC_IP;
+    
+    root /home/ubuntu/chat-app/frontend/build;
+    index index.html index.htm;
+    
     location / {
-        root /home/ec2-user/app/FE-Web/build;
-        index index.html;
         try_files $uri $uri/ /index.html;
     }
-
+    
+    # Proxy cho API calls
     location /api {
         proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+    }
+    
+    # Cho Socket.IO
+    location /socket.io/ {
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
