--- a/frontend.conf
+++ b/frontend.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name YOUR_EC2_PUBLIC_IP;
+    server_name 18.140.55.90;
     
     root /home/ubuntu/chat-app/frontend/build;
     index index.html index.htm;
