update: build foler

--- a/BE/.env
+++ b/BE/.env
@@ -1,10 +1,10 @@
-
 MONGO_URL=mongodb+srv://root:123@cluster0.l3jifjx.mongodb.net/demo_app_chat?retryWrites=true&w=majority
-JWT_SECRET_KEY = cmn_meme_zalo_137167
+JWT_SECRET_KEY=cmn_meme_zalo_137167
 MAIL_USER=jenniekieu6868@gmail.com
 MAIL_PASS=cuge zkyq xndi bbuc
 AWS_REGION=us-east-1
-
 AWS_ACCESS_KEY_ID=AKIARZ5BMQTDYPFN6KEV
 AWS_SECRET_ACCESS_KEY=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
 S3_BUCKET_NAME=qlmh03112003
+PORT=3000
+NODE_ENV=production
